# localsetup

./: Cargo.toml  README.md  RELEASE.md  release.sh
.github/workflows/: ci.yaml  create-release.yaml  release.yaml
src/: main.rs
