[package]
name = "localsetup"
version = "0.0.2"
edition = "2024"
description = "Setup your local computer / user automatically"
license = "GPL-3.0-only"

[dependencies]
toml = "0.9"
reqwest = {version = "0.12", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
